--- a/manuscript/msv1.tex
+++ b/manuscript/msv1.tex
@@ -125,7 +125,10 @@ You can see from the elements of the difference equations that demographics dire
 %The effects of trait evolution :: trait heritability, trait variance, and habitat heterogeneity
 %% When stray rates are moderate-low, greater heritability leads to higher steady-state populations with higher PE's.
 %% Lower heritability gives way to alternative stable states at lower stray rates, which become increasingly divergent
-%% With habitat heterogeneity?
+%% Increased habitat heterogeneity
+  %%% 1) exaggerates lowering of mean biomass with increasing stray rates
+  %%% 2) increases the likelihood of alternative stable sites
+  %%% 3) decreases the PE (!!)
 
 % Constant m
 %% Fold bifurcation @ intermediate values of m
